--- a/manifest.json
+++ b/manifest.json
@@ -6,37 +6,37 @@
   "description": "A simple installable weather web app, built usign Yahoo Weather API.",
   "icons": [
     {
-      "src": "../assets/app-icons/app_icon_36x36.png",
+      "src": "assets/app-icons/app_icon_36x36.png",
       "sizes": "36x36",
       "type": "image/png",
       "density": 0.75
     },
     {
-      "src": "../assets/app-icons/app_icon_48x48.png",
+      "src": "assets/app-icons/app_icon_48x48.png",
       "sizes": "48x48",
       "type": "image/png",
       "density": 1.0
     },
     {
-      "src": "../assets/app-icons/app_icon_72x72.png",
+      "src": "assets/app-icons/app_icon_72x72.png",
       "sizes": "72x72",
       "type": "image/png",
       "density": 1.5
     },
     {
-      "src": "../assets/app-icons/app_icon_96x96.png",
+      "src": "assets/app-icons/app_icon_96x96.png",
       "sizes": "96x96",
       "type": "image/png",
       "density": 2.0
     },
     {
-      "src": "../assets/app-icons/app_icon_144x144.png",
+      "src": "assets/app-icons/app_icon_144x144.png",
       "sizes": "144x144",
       "type": "image/png",
       "density": 3.0
     },
     {
-      "src": "../assets/app-icons/app_icon_192x192.png",
+      "src": "assets/app-icons/app_icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "density": 4.0
