--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Weather App",
   "short-name": "Weather",
   "background_color": "#6c00f6",
-  "theme": "#6c00f6",
+  "theme_color": "#6c00f6",
   "description": "A simple installable weather web app, built usign Yahoo Weather API.",
   "icons": [
     {
