--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Weather App",
-  "short-name": "Weather",
+  "short_name": "Weather",
   "background_color": "#6c00f6",
   "theme_color": "#6c00f6",
   "description": "A simple installable weather web app, built usign Yahoo Weather API.",
