--- a/manifest.json
+++ b/manifest.json
@@ -40,6 +40,12 @@
       "sizes": "192x192",
       "type": "image/png",
       "density": 4.0
+    },
+    {
+      "src": "assets/app-icons/app_icon_512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "density": 4.0
     }
   ],
   "start_url": "index.html",
