Added changes to support New Yahoo Weather API

--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
   "bugs": {
     "url": "https://github.com/SandipNirmal/weather-app-PWA/issues"
   },
-  "homepage": "https://github.com/SandipNirmal/weather-app-PWA#readme"
+  "homepage": "https://github.com/SandipNirmal/weather-app-PWA#readme",
+  "dependencies": {}
 }
